--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -48,6 +48,7 @@ jobs:
           subject: "✅ Selenium Scraper Finished (Status: ${{ job.status }})"
           to: kasabunikil@gmail.com
           from: GitHub Actions <your-email@gmail.com>
+          content_type: text/html   # ✅ VERY IMPORTANT
           body: |
             <!DOCTYPE html>
             <html lang="en">
