--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -51,61 +51,99 @@ jobs:
           content_type: text/html      # ✅ Force HTML format
           body: |
             <!DOCTYPE html>
-            <html lang="en">
-            <head>
-              <meta charset="UTF-8">
-              <meta name="viewport" content="width=device-width, initial-scale=1.0">
-              <title>Daily Attendance Scraper Report</title>
-              <style>
-                body {font-family: Arial, sans-serif;margin:0;padding:0;background-color:#f5f8fa;font-size:12px;}
-                .container {max-width: 400px;margin:10px auto;background-color:#ffffff;border-radius:14px;border:1px solid #e6ecf0;overflow:hidden;}
-                .header-img {width:100%;height:70px;object-fit:cover;display:block;border-bottom:1px solid #e6ecf0;}
-                .report-header {text-align:center;padding:8px;background:#f9fbfc;border-bottom:1px solid #e6ecf0;}
-                .report-header h2 {margin:0;font-size:14px;font-weight:bold;color:#14171a;}
-                .report-header p {margin:2px 0;font-size:11px;color:#657786;}
-                .content {padding:10px 12px;color:#14171a;font-size:12px;line-height:1.5;}
-                .status-box {margin:10px 0;padding:6px;background:#f1f8ff;border-left:3px solid #1da1f2;border-radius:8px;font-size:12px;}
-                .buttons {text-align:center;margin:12px 0;}
-                .btn {display:inline-block;padding:3px 90px;margin:4px;text-decoration:none;color:#ffffff;border-radius:20px;font-size:12px;font-weight:bold;}
-                .btn-blue {background-color:#657786;padding:3px 87px;}
-                .btn-red {background-color:red;padding:3px 94px;}
-                .btn-gray {background-color:#1da1f2;padding:3px 80px;}
-                .footer {text-align:center;padding:6px;font-size:11px;color:#657786;border-top:1px solid #e6ecf0;}
-              </style>
-            </head>
-            <body>
-              <div class="container">
-                  <img src="https://images.unsplash.com/photo-1557989048-03456d01a26e?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzB8fGNsYXNzJTIwYXR0ZW5kZW5jZSUyMHJlcG9ydHxlbnwwfHwwfHx8MA%3D%3D" alt="Attendance" class="header-img">
-                  
-                  <div class="report-header">
-                      <h2>✅ Daily Attendance Scraper Report</h2>
-                      <p>${{ github.event_name }} | Run #${{ github.run_number }}</p>
-                  </div>
+<html lang="en">
+  <body style="margin:0; padding:0; background-color:#f5f8fa; font-family:Arial,sans-serif; font-size:12px;">
 
-                  <div class="content">
-                      <strong>Hello Nikki 👋,</strong>
-                      <p>The Selenium scraper has finished running.</p>
+    <!-- Container Table -->
+    <table width="100%" cellpadding="0" cellspacing="0" style="background-color:#f5f8fa;">
+      <tr>
+        <td align="center">
 
-                      <div class="status-box">
-                          📌 <strong>Status:</strong> <b>${{ job.status }}</b><br>
-                          ⏰ <strong>Run Time:</strong> ${{ github.run_started_at }}
-                      </div>
+          <!-- Card Container -->
+          <table width="400" cellpadding="0" cellspacing="0" style="background:#ffffff; border:1px solid #e6ecf0; border-radius:14px; overflow:hidden;">
 
-                      <p>📄 Click below to view:</p>
+            <!-- Header Image -->
+            <tr>
+              <td>
+                <img src="https://images.unsplash.com/photo-1557989048-03456d01a26e?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzB8fGNsYXNzJTIwYXR0ZW5kZW5jZSUyMHJlcG9ydHxlbnwwfHwwfHx8MA%3D%3D" alt="Attendance" width="400" height="70" style="display:block; object-fit:cover; border-bottom:1px solid #e6ecf0; border-radius:14px 14px 0 0;">
+              </td>
+            </tr>
 
-                      <div class="buttons">
-                          <a href="https://docs.google.com/spreadsheets/d/13ZP7Q9-Yc4mFM64zGosg0CZYWtwWq2RlL9piU2B7qeY/edit?gid=728086314#gid=728086314" class="btn btn-blue">📖 Open Sheet</a><br>
-                          <a href="${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}" class="btn btn-red">📜 View Logs</a><br>
-                          <a href="${{ github.server_url }}/${{ github.repository }}/actions/workflows/scraper.yml?browser=1" class="btn btn-gray">🔄 Retry Workflow</a>
-                      </div>
+            <!-- Report Header -->
+            <tr>
+              <td align="center" style="background:#f9fbfc; padding:8px; border-bottom:1px solid #e6ecf0;">
+                <h2 style="margin:0; font-size:14px; font-weight:bold; color:#14171a;">✅ Daily Attendance Scraper Report</h2>
+                <p style="margin:2px 0; font-size:11px; color:#657786;">${{ github.event_name }} | Run #${{ github.run_number }}</p>
+              </td>
+            </tr>
 
-                      <p>Keep track easily! 🚀</p>
-                      <p>Cheers,<br>Automation Bot 🤖</p>
-                  </div>
+            <!-- Content Section -->
+            <tr>
+              <td style="padding:10px 12px; color:#14171a; font-size:12px; line-height:1.5;">
+                <strong>Hello Nikki 👋,</strong><br>
+                The Selenium scraper has finished running.
+                
+                <!-- Status Box -->
+                <table width="100%" cellpadding="8" cellspacing="0" style="margin:10px 0; background:#f1f8ff; border-left:3px solid #1da1f2; border-radius:8px;">
+                  <tr>
+                    <td style="font-size:12px; color:#14171a;">
+                      📌 <strong>Status:</strong> <b>${{ job.status }}</b><br>
+                      ⏰ <strong>Run Time:</strong> ${{ github.run_started_at }}
+                    </td>
+                  </tr>
+                </table>
 
-                  <div class="footer">
-                      <p>Auto Email | GitHub Actions</p>
-                  </div>
-              </div>
-            </body>
-            </html>
+                📄 Click below to view:
+              </td>
+            </tr>
+
+            <!-- Buttons Section -->
+            <tr>
+              <td align="center" style="padding:10px;">
+                
+                <!-- Open Sheet -->
+                <a href="https://docs.google.com/spreadsheets/d/13ZP7Q9-Yc4mFM64zGosg0CZYWtwWq2RlL9piU2B7qeY/edit?gid=728086314#gid=728086314"
+                   style="display:inline-block; background-color:#657786; color:#ffffff; text-decoration:none; font-size:12px; font-weight:bold; padding:6px 60px; margin:6px; border-radius:20px;">
+                   📖 Open Sheet
+                </a>
+                <br>
+                
+                <!-- View Logs -->
+                <a href="${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+                   style="display:inline-block; background-color:red; color:#ffffff; text-decoration:none; font-size:12px; font-weight:bold; padding:6px 66px; margin:6px; border-radius:20px;">
+                   📜 View Logs
+                </a>
+                <br>
+
+                <!-- Retry Workflow -->
+                <a href="${{ github.server_url }}/${{ github.repository }}/actions/workflows/scraper.yml?browser=1"
+                   style="display:inline-block; background-color:#1da1f2; color:#ffffff; text-decoration:none; font-size:12px; font-weight:bold; padding:6px 50px; margin:6px; border-radius:20px;">
+                   🔄 Retry Workflow
+                </a>
+
+              </td>
+            </tr>
+
+            <!-- Message -->
+            <tr>
+              <td style="padding:0 12px 10px; color:#14171a; font-size:12px; line-height:1.5;">
+                Keep track easily! 🚀<br>
+                Cheers,<br>
+                Automation Bot 🤖
+              </td>
+            </tr>
+
+            <!-- Footer -->
+            <tr>
+              <td align="center" style="padding:6px; font-size:11px; color:#657786; border-top:1px solid #e6ecf0;">
+                Auto Email | GitHub Actions
+              </td>
+            </tr>
+
+          </table>
+        </td>
+      </tr>
+    </table>
+
+  </body>
+</html>
