--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -42,8 +42,7 @@ jobs:
           subject: "✅ Selenium Scraper Finished (Status: ${{ job.status }})"
           to: kasabunikil@gmail.com
           from: "GitHub Actions Bot <${{ secrets.MAIL_USERNAME }}>"
-          content_type: text/html
-          body: |
+          html_body: |
             <!DOCTYPE html>
             <html lang="en">
             <head>
