--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -3,34 +3,46 @@ name: Daily Selenium Scraper
 on:
   schedule:
     - cron: "30 1 * * *"   # Runs daily at 07:00 AM IST (01:30 UTC)
-  workflow_dispatch:
+  workflow_dispatch:        # Allows manual run from Actions tab
 
 jobs:
   run-scraper:
     runs-on: ubuntu-latest
 
     steps:
+      # ✅ Step 1: Checkout repo
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      # ✅ Step 2: Setup Python
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: "3.10"
 
+      # ✅ Step 3: Install dependencies
       - name: Install dependencies
         run: |
           pip install -r requirements.txt
           sudo apt-get update
           sudo apt-get install -y chromium-browser chromium-chromedriver
 
+      # ✅ Step 4: Create Google Sheets credentials
       - name: Create Google credentials file
-        run: |
-          echo '${{ secrets.GOOGLE_CREDENTIALS }}' > credentials.json
+        run: echo '${{ secrets.GOOGLE_CREDENTIALS }}' > credentials.json
 
+      # ✅ Step 5: Capture run time in IST
+      - name: Get current time in IST
+        id: runtime
+        run: |
+          export TZ=Asia/Kolkata
+          echo "now=$(date '+%Y-%m-%d %H:%M:%S %Z')" >> $GITHUB_OUTPUT
+
+      # ✅ Step 6: Run the Selenium scraper
       - name: Run scraper
         run: python attendence_V4.py
 
+      # ✅ Step 7: Send email notification (always runs)
       - name: Send email notification
         if: always()
         uses: dawidd6/action-send-mail@v3
@@ -140,36 +152,51 @@ jobs:
             </head>
             <body>
               <div class="container">
-                <img src="https://images.unsplash.com/photo-1557989048-03456d01a26e?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzB8fGNsYXNzJTIwYXR0ZW5kZW5jZSUyMHJlcG9ydHxlbnwwfHwwfHx8MA%3D%3D" alt="Attendance" class="header-img">
+                <!-- Header Image -->
+                <img src="https://images.unsplash.com/photo-1557989048-03456d01a26e?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzB8fGNsYXNzJTIwYXR0ZW5kZW5jZSUyMHJlcG9ydHxlbnwwfHwwfHx8MA%3D%3D"
+                     alt="Attendance" class="header-img">
 
+                <!-- Header -->
                 <div class="report-header">
                   <h2>✅ Daily Attendance Scraper Report</h2>
                   <p>${{ github.event_name }} | Run #${{ github.run_number }}</p>
                 </div>
 
+                <!-- Content -->
                 <div class="content">
                   <strong>Hello Nikki 👋,</strong>
                   <p>The Selenium scraper has finished running.</p>
 
+                  <!-- Status Box -->
                   <div class="status-box">
                     📌 <strong>Status:</strong> <b>${{ job.status }}</b><br>
-                    ⏰ <strong>Run Time:</strong> ${{ github.run_started_at }}
+                    ⏰ <strong>Run Time:</strong> ${{ steps.runtime.outputs.now }}
                   </div>
 
                   <p>📄 Click below to view:</p>
 
+                  <!-- Buttons -->
                   <div class="buttons">
-                    <a href="https://docs.google.com/spreadsheets/d/13ZP7Q9-Yc4mFM64zGosg0CZYWtwWq2RlL9piU2B7qeY/edit?gid=728086314#gid=728086314" class="btn btn-blue">📖 Open Sheet</a><br>
-                    <a href="${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}" class="btn btn-red">📜 View Logs</a><br>
-                    <a href="${{ github.server_url }}/${{ github.repository }}/actions" class="btn btn-gray">🔄 Retry Workflow</a>
+                    <!-- Google Sheet -->
+                    <a href="https://docs.google.com/spreadsheets/d/13ZP7Q9-Yc4mFM64zGosg0CZYWtwWq2RlL9piU2B7qeY/edit?gid=728086314#gid=728086314"
+                       class="btn btn-blue">📖 Open Sheet</a><br>
+
+                    <!-- Dynamic Logs Link -->
+                    <a href="${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+                       class="btn btn-red">📜 View Logs</a><br>
+
+                    <!-- Retry Workflow Link -->
+                    <a href="${{ github.server_url }}/${{ github.repository }}/actions"
+                       class="btn btn-gray">🔄 Retry Workflow</a>
                   </div>
 
                   <p>Keep track easily! 🚀</p>
                   <p>Cheers,<br>Automation Bot 🤖</p>
                 </div>
 
+                <!-- Footer -->
                 <div class="footer">
-                  <p>Auto Email | GitHub Actions</p>
+                  Auto Email | GitHub Actions
                 </div>
               </div>
             </body>
