--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -51,7 +51,7 @@ jobs:
           server_port: 465
           username: ${{ secrets.MAIL_USERNAME }}
           password: ${{ secrets.MAIL_PASSWORD }}
-          subject: "✅ Selenium Scraper Finished (Status: ${{ job.status }})"
+          subject: "Selenium Scraper Finished (Status: ${{ job.status }})"
           to: kasabunikil@gmail.com
           from: "GitHub Actions Bot <${{ secrets.MAIL_USERNAME }}>"
           html_body: |
@@ -158,7 +158,7 @@ jobs:
 
                 <!-- Header -->
                 <div class="report-header">
-                  <h2>✅ Daily Attendance Scraper Report</h2>
+                  <h2>Daily Attendance Scraper Report</h2>
                   <p>${{ github.event_name }} | Run #${{ github.run_number }}</p>
                 </div>
 
