--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -20,21 +20,20 @@ jobs:
         with:
           python-version: "3.10"
 
-      # ✅ Step 3: Install dependencies
+      # ✅ Step 3: Install dependencies + Chromium
       - name: Install dependencies
-  run: |
-    pip install -r requirements.txt
-    sudo apt-get update
-    sudo apt-get install -y chromium-browser chromium-chromedriver
-    which chromium-browser
-    which chromedriver
-
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y chromium-browser chromium-chromedriver
+          which chromium-browser
+          which chromedriver
+          pip install -r requirements.txt
 
       # ✅ Step 4: Create Google Sheets credentials
       - name: Create Google credentials file
         run: echo '${{ secrets.GOOGLE_CREDENTIALS }}' > credentials.json
 
-      # ✅ Step 5: Capture run time in IST
+      # ✅ Step 5: Capture current IST time
       - name: Get current time in IST
         id: runtime
         run: |
