--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -2,8 +2,8 @@ name: Daily Selenium Scraper
 
 on:
   schedule:
-    - cron: "40 8 * * *"   # Runs daily at 02:10 PM IST (08:40 UTC)
-  workflow_dispatch:        # Allows manual run from Actions tab
+    - cron: "0 9 * * *"   # ✅ Runs daily at 2:30 PM IST (09:00 UTC)
+  workflow_dispatch:        # ✅ Allows manual trigger from Actions tab
 
 jobs:
   run-scraper:
@@ -20,31 +20,38 @@ jobs:
         with:
           python-version: "3.10"
 
-      # ✅ Step 3: Install dependencies + Chromium
-      - name: Install dependencies
+      # ✅ Step 3: Install Chromium & ChromeDriver for Selenium
+      - name: Install Chromium & ChromeDriver
         run: |
           sudo apt-get update
           sudo apt-get install -y chromium-browser chromium-chromedriver
-          which chromium-browser
-          which chromedriver
+          echo "Chromium path: $(which chromium-browser)"
+          echo "ChromeDriver path: $(which chromedriver)"
+
+      # ✅ Step 4: Install Python dependencies
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      # ✅ Step 4: Create Google Sheets credentials
+      # ✅ Step 5: Create Google Sheets credentials
       - name: Create Google credentials file
         run: echo '${{ secrets.GOOGLE_CREDENTIALS }}' > credentials.json
 
-      # ✅ Step 5: Capture current IST time
-      - name: Get current time in IST
+      # ✅ Step 6: Show current UTC & IST times
+      - name: Show current time
         id: runtime
         run: |
+          echo "✅ UTC time: $(date -u '+%Y-%m-%d %H:%M:%S UTC')"
           export TZ=Asia/Kolkata
+          echo "✅ IST time: $(date '+%Y-%m-%d %H:%M:%S %Z')"
           echo "now=$(date '+%Y-%m-%d %H:%M:%S %Z')" >> $GITHUB_OUTPUT
 
-      # ✅ Step 6: Run the Selenium scraper
-      - name: Run scraper
+      # ✅ Step 7: Run the Selenium scraper
+      - name: Run Selenium scraper
         run: python attendence_V4.py
 
-      # ✅ Step 7: Send email notification (always runs)
+      # ✅ Step 8: Send Email Notification (always runs)
       - name: Send email notification
         if: always()
         uses: dawidd6/action-send-mail@v3
@@ -53,153 +60,32 @@ jobs:
           server_port: 465
           username: ${{ secrets.MAIL_USERNAME }}
           password: ${{ secrets.MAIL_PASSWORD }}
-          subject: "Selenium Scraper Finished (Status: ${{ job.status }})"
+          subject: "Daily Selenium Scraper - Status: ${{ job.status }}"
           to: kasabunikil@gmail.com
           from: "GitHub Actions Bot <${{ secrets.MAIL_USERNAME }}>"
           html_body: |
             <!DOCTYPE html>
-            <html lang="en">
-            <head>
-              <meta charset="UTF-8">
-              <meta name="viewport" content="width=device-width, initial-scale=1.0">
-              <title>Daily Attendance Scraper Report</title>
-              <style>
-                body {
-                  font-family: Arial, sans-serif;
-                  margin: 0;
-                  padding: 0;
-                  background-color: #f5f8fa;
-                  font-size: 12px;
-                }
-                .container {
-                  max-width: 400px;
-                  margin: 10px auto;
-                  background-color: #ffffff;
-                  border-radius: 14px;
-                  border: 1px solid #e6ecf0;
-                  overflow: hidden;
-                }
-                .header-img {
-                  width: 100%;
-                  height: 70px;
-                  object-fit: cover;
-                  display: block;
-                  border-bottom: 1px solid #e6ecf0;
-                }
-                .report-header {
-                  text-align: center;
-                  padding: 8px;
-                  background: #f9fbfc;
-                  border-bottom: 1px solid #e6ecf0;
-                }
-                .report-header h2 {
-                  margin: 0;
-                  font-size: 14px;
-                  font-weight: bold;
-                  color: #14171a;
-                }
-                .report-header p {
-                  margin: 2px 0;
-                  font-size: 11px;
-                  color: #657786;
-                }
-                .content {
-                  padding: 10px 12px;
-                  color: #14171a;
-                  font-size: 12px;
-                  line-height: 1.5;
-                }
-                .status-box {
-                  margin: 10px 0;
-                  padding: 6px;
-                  background: #f1f8ff;
-                  border-left: 3px solid #1da1f2;
-                  border-radius: 8px;
-                  font-size: 12px;
-                }
-                .buttons {
-                  text-align: center;
-                  margin: 12px 0;
-                }
-                .btn {
-                  display: inline-block;
-                  padding: 3px 90px;
-                  margin: 4px;
-                  text-decoration: none;
-                  color: #ffffff;
-                  border-radius: 20px;
-                  font-size: 12px;
-                  font-weight: bold;
-                }
-                .btn-blue {
-                  background-color: #657786;
-                  padding: 3px 87px;
-                }
-                .btn-red {
-                  background-color: red;
-                  padding: 3px 94px;
-                }
-                .btn-gray {
-                  background-color: #1da1f2;
-                  padding: 3px 80px;
-                }
-                .footer {
-                  text-align: center;
-                  padding: 6px;
-                  font-size: 11px;
-                  color: #657786;
-                  border-top: 1px solid #e6ecf0;
-                }
-              </style>
-            </head>
-            <body>
-              <div class="container">
-                <!-- Header Image -->
-                <img src="https://images.unsplash.com/photo-1557989048-03456d01a26e?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzB8fGNsYXNzJTIwYXR0ZW5kZW5jZSUyMHJlcG9ydHxlbnwwfHwwfHx8MA%3D%3D"
-                     alt="Attendance" class="header-img">
-
-                <!-- Header -->
-                <div class="report-header">
-                  <h2>Daily Attendance Scraper Report</h2>
-                  <p>${{ github.event_name }} | Run #${{ github.run_number }}</p>
-                </div>
-
-                <!-- Content -->
-                <div class="content">
-                  <strong>Hello Nikki 👋,</strong>
-                  <p>The Selenium scraper has finished running.</p>
-
-                  <!-- Status Box -->
-                  <div class="status-box">
-                    📌 <strong>Status:</strong> <b>${{ job.status }}</b><br>
-                    ⏰ <strong>Run Time:</strong> ${{ steps.runtime.outputs.now }}
-                  </div>
-
-                  <p>📄 Click below to view:</p>
-
-                  <!-- Buttons -->
-                  <div class="buttons">
-                    <!-- Google Sheet -->
-                    <a href="https://docs.google.com/spreadsheets/d/13ZP7Q9-Yc4mFM64zGosg0CZYWtwWq2RlL9piU2B7qeY/edit?gid=728086314#gid=728086314"
-                       class="btn btn-blue">📖 Open Sheet</a><br>
-
-                    <!-- Dynamic Logs Link -->
-                    <a href="${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
-                       class="btn btn-red">📜 View Logs</a><br>
-
-                    <!-- Retry Workflow Link -->
-                    <a href="${{ github.server_url }}/${{ github.repository }}/actions"
-                       class="btn btn-gray">🔄 Retry Workflow</a>
-                  </div>
-
-                  <p>Keep track easily! 🚀</p>
-                  <p>Cheers,<br>Automation Bot 🤖</p>
-                </div>
-
-                <!-- Footer -->
-                <div class="footer">
-                  Auto Email | GitHub Actions
-                </div>
-              </div>
+            <html>
+            <body style="font-family: Arial, sans-serif; font-size: 14px; color: #333;">
+              <h2>✅ Daily Attendance Scraper Report</h2>
+              <p>📅 <b>Date/Time (IST):</b> ${{ steps.runtime.outputs.now }}</p>
+              <p>📌 <b>Status:</b> <b>${{ job.status }}</b></p>
+              <p>📄 <b>Google Sheet:</b> 
+                <a href="https://docs.google.com/spreadsheets/d/13ZP7Q9-Yc4mFM64zGosg0CZYWtwWq2RlL9piU2B7qeY/edit?gid=728086314#gid=728086314">
+                  Open Attendance Sheet
+                </a>
+              </p>
+              <p>📜 <b>Logs:</b> 
+                <a href="${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}">
+                  View Full Logs
+                </a>
+              </p>
+              <p>🔄 <b>Retry:</b> 
+                <a href="${{ github.server_url }}/${{ github.repository }}/actions">
+                  Run Workflow Again
+                </a>
+              </p>
+              <hr>
+              <small>Automated Email via GitHub Actions 🤖</small>
             </body>
             </html>
