--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -2,7 +2,7 @@ name: Daily Selenium Scraper
 
 on:
   schedule:
-    - cron: "30 1 * * *"   # Runs daily at 07:00 AM IST (01:30 UTC)
+    - cron: "40 8 * * *"   # Runs daily at 02:10 PM IST (08:40 UTC)
   workflow_dispatch:        # Allows manual run from Actions tab
 
 jobs:
@@ -44,7 +44,7 @@ jobs:
       - name: Run scraper
         run: python attendence_V4.py
 
-      # ✅ Step 7: Send email notification with modern icons
+      # ✅ Step 7: Send email notification (always runs)
       - name: Send email notification
         if: always()
         uses: dawidd6/action-send-mail@v3
@@ -150,16 +150,12 @@ jobs:
                   color: #657786;
                   border-top: 1px solid #e6ecf0;
                 }
-                .icon {
-                  vertical-align: middle;
-                  margin-right: 4px;
-                }
               </style>
             </head>
             <body>
               <div class="container">
                 <!-- Header Image -->
-                <img src="https://images.unsplash.com/photo-1557989048-03456d01a26e?w=600&auto=format&fit=crop&q=60"
+                <img src="https://images.unsplash.com/photo-1557989048-03456d01a26e?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzB8fGNsYXNzJTIwYXR0ZW5kZW5jZSUyMHJlcG9ydHxlbnwwfHwwfHx8MA%3D%3D"
                      alt="Attendance" class="header-img">
 
                 <!-- Header -->
@@ -170,72 +166,36 @@ jobs:
 
                 <!-- Content -->
                 <div class="content">
-                  <strong>Hello Nikki,</strong>
+                  <strong>Hello Nikki 👋,</strong>
                   <p>The Selenium scraper has finished running.</p>
 
                   <!-- Status Box -->
                   <div class="status-box">
-                    <!-- Status icon -->
-                    <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="none" stroke="#1da1f2" stroke-width="2" viewBox="0 0 24 24">
-                      <circle cx="12" cy="12" r="10"/>
-                      <polyline points="12 6 12 12 16 14"/>
-                    </svg>
-                    <strong>Status:</strong> <b>${{ job.status }}</b><br>
-
-                    <!-- Clock icon -->
-                    <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="none" stroke="#1da1f2" stroke-width="2" viewBox="0 0 24 24">
-                      <circle cx="12" cy="12" r="10"/>
-                      <polyline points="12 6 12 12 16 14"/>
-                    </svg>
-                    <strong>Run Time:</strong> ${{ steps.runtime.outputs.now }}
+                    📌 <strong>Status:</strong> <b>${{ job.status }}</b><br>
+                    ⏰ <strong>Run Time:</strong> ${{ steps.runtime.outputs.now }}
                   </div>
 
-                  <p>
-                    <!-- Document icon -->
-                    <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="none" stroke="#1da1f2" stroke-width="2" viewBox="0 0 24 24">
-                      <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
-                      <polyline points="14 2 14 8 20 8"/>
-                    </svg>
-                    Click below to view:
-                  </p>
+                  <p>📄 Click below to view:</p>
 
                   <!-- Buttons -->
                   <div class="buttons">
                     <!-- Google Sheet -->
                     <a href="https://docs.google.com/spreadsheets/d/13ZP7Q9-Yc4mFM64zGosg0CZYWtwWq2RlL9piU2B7qeY/edit?gid=728086314#gid=728086314"
-                       class="btn btn-blue">
-                      <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="none" stroke="#fff" stroke-width="2" viewBox="0 0 24 24">
-                        <path d="M3 3h18v18H3z"/>
-                        <path d="M3 9h18M9 21V9"/>
-                      </svg>
-                      Open Sheet
-                    </a><br>
+                       class="btn btn-blue">📖 Open Sheet</a><br>
 
-                    <!-- Logs Link -->
+                    <!-- Dynamic Logs Link -->
                     <a href="${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
-                       class="btn btn-red">
-                      <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="none" stroke="#fff" stroke-width="2" viewBox="0 0 24 24">
-                        <path d="M4 4h16v16H4z"/>
-                        <path d="M8 8h8v8H8z"/>
-                      </svg>
-                      View Logs
-                    </a><br>
+                       class="btn btn-red">📜 View Logs</a><br>
 
-                    <!-- Retry Link -->
+                    <!-- Retry Workflow Link -->
                     <a href="${{ github.server_url }}/${{ github.repository }}/actions"
-                       class="btn btn-gray">
-                      <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="none" stroke="#fff" stroke-width="2" viewBox="0 0 24 24">
-                        <polyline points="1 4 1 10 7 10"/>
-                        <polyline points="23 20 23 14 17 14"/>
-                        <path d="M20.49 9A9 9 0 0 0 6.21 4.56L1 10m22 4l-5.21 5.44A9 9 0 0 1 3.51 15"/>
-                      </svg>
-                      Retry Workflow
-                    </a>
+                       class="btn btn-gray">🔄 Retry Workflow</a>
                   </div>
 
-                  <p>Stay updated easily!</p>
-                  <p>Cheers,<br>Automation Bot</p>
+                  <p>Keep track easily! 🚀</p>
+                  <p>Cheers,<br>Automation Bot 🤖</p>
                 </div>
+
 
                 <!-- Footer -->
                 <div class="footer">
