--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -27,7 +27,7 @@ jobs:
           sudo apt-get install -y chromium-browser chromium-chromedriver
           which chromium-browser
           which chromedriver
-          pip install -r requirements.txt
+          pip install -r requirements_V4.txt
 
       # ✅ Step 4: Create Google Sheets credentials
       - name: Create Google credentials file
