--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -42,7 +42,7 @@ jobs:
 
       # ✅ Step 6: Run the Selenium scraper
       - name: Run scraper
-        run: python attendence.py
+        run: python V2.py
 
       # ✅ Step 7: Send email notification (always runs)
       - name: Send email notification
